--- a/pom.xml
+++ b/pom.xml
@@ -3,8 +3,6 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-
-
 	<groupId>example</groupId>
 	<artifactId>jpa</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
@@ -13,6 +11,7 @@
 	<modules>
 		<module>c01.simple</module>
 		<module>c02.querydsl</module>
+		<module>c03.entity-mapping</module>
 	</modules>
 	
 	<properties>
