Modify module name

--- a/c01.simple/pom.xml
+++ b/c01.simple/pom.xml
@@ -9,7 +9,7 @@
 		<artifactId>jpa</artifactId>
 	</parent>
 
-	<artifactId>jpa.c01.simple</artifactId>
+	<artifactId>c01.simple</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 
 </project>
