--- a/c03.entity-mapping/c03.solution/pom.xml
+++ b/c03.entity-mapping/c03.solution/pom.xml
@@ -6,10 +6,10 @@
 	<parent>
 		<groupId>example</groupId>
 		<version>0.0.1-SNAPSHOT</version>
-		<artifactId>jpa.c03.entity-mapping</artifactId>
+		<artifactId>c03.entity-mapping</artifactId>
 	</parent>
 
-	<artifactId>jpa.c03.solution</artifactId>
+	<artifactId>c03.solution</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 
 </project>
