--- a/c04.uni-many-to-one/c04.cascade/pom.xml
+++ b/c04.uni-many-to-one/c04.cascade/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>example</groupId>
 		<version>0.0.1-SNAPSHOT</version>
-		<artifactId>jpa</artifactId>
+		<artifactId>c04.uni-many-to-one</artifactId>
 	</parent>
 
 	<artifactId>c04.cascade</artifactId>
