--- a/c05.uni-one-to-many/c05.compositekey/pom.xml
+++ b/c05.uni-one-to-many/c05.compositekey/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>example</groupId>
 		<version>0.0.1-SNAPSHOT</version>
-		<artifactId>jpa</artifactId>
+		<artifactId>c05.uni-one-to-many</artifactId>
 	</parent>
 
 	<artifactId>c05.compositekey</artifactId>
