--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
 	</modules>
 	
 	<properties>
-		<spring.boot.version>2.6.3</spring.boot.version>
+		<spring.boot.version>2.6.4</spring.boot.version>
 		<maven.compiler.source>11</maven.compiler.source>
 		<maven.compiler.target>11</maven.compiler.target>
 		<!--<h2.version>1.4.199</h2.version>-->
@@ -48,6 +48,18 @@
 			<optional>true</optional>
 		</dependency>
 
+		<!-- logback vs log4j2 -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-logging</artifactId>
+			<version>${spring.boot.version}</version>
+		</dependency>
+		<!--<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-log4j2</artifactId>
+			<version>${spring.boot.version}</version>
+		</dependency>-->
+
 		<dependency>
 			<groupId>com.integralblue</groupId>
 			<artifactId>log4jdbc-spring-boot-starter</artifactId>
@@ -59,6 +71,12 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<version>${spring.boot.version}</version>
 			<scope>test</scope>
+			<!--<exclusions>
+				<exclusion>
+					<groupId>org.springframework.boot</groupId>
+					<artifactId>spring-boot-starter-logging</artifactId>
+				</exclusion>
+			</exclusions>-->
 		</dependency>
 
 	</dependencies>
