--- a/pom.xml
+++ b/pom.xml
@@ -61,9 +61,9 @@
 		</dependency>-->
 
 		<dependency>
-			<groupId>com.integralblue</groupId>
-			<artifactId>log4jdbc-spring-boot-starter</artifactId>
-			<version>2.0.0</version>
+			<groupId>org.bgee.log4jdbc-log4j2</groupId>
+			<artifactId>log4jdbc-log4j2-jdbc4.1</artifactId>
+			<version>1.16</version>
 		</dependency>
 
 		<dependency>
