--- a/c08.n-plus-1/c08.jpql-solved/src/main/resources/application.yml
+++ b/c08.n-plus-1/c08.jpql-solved/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
   datasource:
     #driver-class-name: org.h2.Driver
     driver-class-name: net.sf.log4jdbc.sql.jdbcapi.DriverSpy
-    url: "jdbc:log4jdbc:h2:./target/spring-jpa-c08-jpql-solved;DATABASE_TO_UPPER=false;MODE=LEGACY"
+    url: "jdbc:log4jdbc:h2:./target/spring-jpa-c08-jpql-solved;DB_CLOSE_ON_EXIT=FALSE;DATABASE_TO_UPPER=false;MODE=LEGACY"
     username: "sa"
     password:
 
