--- a/c10.multibag/pom.xml
+++ b/c10.multibag/pom.xml
@@ -15,6 +15,7 @@
 
 	<modules>
 		<module>c10.multibag-querydsl-quest</module>
+		<module>c10.multibag-querydsl-solved</module>
 	</modules>
 
 </project>
