--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
 		<module>c09.method-naming</module>
 		<module>c10.multibag</module>
 		<module>c11.pagination</module>
+		<module>c12.projection</module>
 	</modules>
 	
 	<properties>
